BurgerConstructor and BurgerIngredients were created

--- a/src/index.css
+++ b/src/index.css
@@ -8,3 +8,27 @@ a, a:hover, a:focus, a:active {
   text-decoration: none;
   color: inherit;
 }
+
+::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 0;
+}
+
+::-webkit-scrollbar-track {
+  background: #2F2F37;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #8585AD;
+  border: 3px solid #8585AD;
+  box-sizing: border-box;
+  height: 75%;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #8585AD;
+}
