create Modal and ModalOverlay

--- a/src/components/burger-ingredients/ingredient-card/ingredient-card.module.css
+++ b/src/components/burger-ingredients/ingredient-card/ingredient-card.module.css
@@ -10,12 +10,14 @@
 .image {
     width: 240px;
     height: 120px;
+    cursor: pointer;
 }
 
 .name {
     height: 48px;
     overflow: hidden;
     text-align: center;
+    cursor: pointer;
 }
 
 .price {
