--- a/src/components/modal/modal.module.css
+++ b/src/components/modal/modal.module.css
@@ -10,6 +10,18 @@
     z-index: 3;
 }
 
+.container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
 .close {
     position: absolute;
     right: 40px;
