update to sprint2/step2

--- a/src/components/burger-constructor/burger-component/styles.module.css
+++ b/src/components/burger-constructor/burger-component/styles.module.css
@@ -1,8 +1,17 @@
 .drag_icon {
     margin-right: 8px;
+    cursor: pointer;
 }
 
 .component {
     display: flex;
     align-items: center;
+}
+
+.hovered {
+    padding-top: 40px;
+}
+
+.dragged {
+    display: none;
 }
