html and css for pages /login, /register, /forgot-password, /reset-password

--- a/src/pages/not-found/style.module.css
+++ b/src/pages/not-found/style.module.css
@@ -1,6 +1,10 @@
 .wrapper {
-    min-height: 400px; 
+    min-height: calc(100vh - 128px); 
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.link, .link:hover {
+    color: #4C4CFF;
 }
