--- a/src/pages/register/style.module.css
+++ b/src/pages/register/style.module.css
@@ -1,6 +1,29 @@
 .wrapper {
-    min-height: 400px; 
     display: flex;
     justify-content: center;
     align-items: center;
+    min-height: calc(100vh - 128px);
+}
+
+.container {
+    margin: 40px auto;
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+    width: 480px;
+}
+
+.form {
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+}
+
+.center {
+    display: flex;
+    justify-content: center;
+}
+
+.link, .link:hover {
+    color: #4C4CFF;
 }
