--- a/src/pages/login/style.module.css
+++ b/src/pages/login/style.module.css
@@ -1,18 +1,3 @@
-.wrapper {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: calc(100vh - 128px);
-}
-
-.container {
-    margin: 40px auto;
-    display: flex;
-    flex-direction: column;
-    align-items: stretch;
-    width: 480px;
-}
-
 .form {
     display: flex;
     flex-direction: column;
@@ -26,4 +11,8 @@
 
 .link, .link:hover {
     color: #4C4CFF;
+}
+
+.error {
+    color: #FF0000;
 }
