--- a/src/components/app-header/nav-bar/styles.module.css
+++ b/src/components/app-header/nav-bar/styles.module.css
@@ -1,7 +1,9 @@
 ul.list {
+    width: 100%;
     list-style-type: none;
     margin: 0;
     padding: 0;
+    position: relative;
 }
 
 li.item {
@@ -12,10 +14,13 @@ li.item {
 }
 
 li.item:last-child {
+    position: absolute;
+    right: 0;
     margin-right: 0;
 }
 
 .nav {
+    width: 100%;
     display: flex;
     flex-direction: row;
     align-items: center;
