--- a/src/components/app-header/nav-bar/styles.module.css
+++ b/src/components/app-header/nav-bar/styles.module.css
@@ -13,6 +13,15 @@ li.item {
     padding: 0;
 }
 
+li.item > a {
+    height: 56px;
+    padding: 0 20px;
+    border-radius: 40px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
 li.item:last-child {
     position: absolute;
     right: 0;
