--- a/src/pages/profile/style.module.css
+++ b/src/pages/profile/style.module.css
@@ -1,6 +1,47 @@
 .wrapper {
-    min-height: 400px; 
+    width: 1240px;
+    margin: 0 auto;
+    margin-top: 120px;
+    display: flex;
+}
+
+.aside {
+    width: 320px;
+    margin-right: 60px;
+}
+
+.menu {
+    margin-bottom: 80px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.menu_item {
+    height: 64px;
+}
+
+.description {
+    opacity: 40%;
+}
+
+.form {
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+}
+
+.center {
     display: flex;
     justify-content: center;
-    align-items: center;
+}
+
+.btn_logout {
+    background: none;
+    border: none;
+    cursor: pointer;
+}
+
+.error {
+    color: #FF0000;
 }
