big update that lost in renaming files

--- a/src/pages/ingredient/style.module.css
+++ b/src/pages/ingredient/style.module.css
@@ -1,5 +1,5 @@
 .wrapper {
-    min-height: 400px; 
+    margin-top: 80px;
     display: flex;
     justify-content: center;
     align-items: center;
