--- a/src/components/modal/ingredient-details/styles.module.css
+++ b/src/components/modal/ingredient-details/styles.module.css
@@ -9,9 +9,8 @@
 .header {
     height: 64px;
     display: flex;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: center;
-    align-self: flex-start;
     margin-right: 50px;
 }
 
