--- a/src/components/form-wrapper/style.module.css
+++ b/src/components/form-wrapper/style.module.css
@@ -9,6 +9,6 @@
     margin: 40px auto;
     display: flex;
     flex-direction: column;
-    align-items: stretch;
+    align-items: center;
     width: 480px;
 }
