--- a/src/pages/register/style.module.css
+++ b/src/pages/register/style.module.css
@@ -1,12 +1,8 @@
 .form {
     display: flex;
     flex-direction: column;
-    align-items: stretch;
-}
-
-.center {
-    display: flex;
-    justify-content: center;
+    align-items: center;
+    margin-bottom: 80px;
 }
 
 .link, .link:hover {
