--- a/src/pages/feed/style.module.css
+++ b/src/pages/feed/style.module.css
@@ -1,6 +1,12 @@
 .wrapper {
     width: 1240px;
     margin: 0 auto;
-    margin-top: 120px;
-    display: flex;
+}
+
+.orders {
+    height: 800px;
+    width: 600px;
+    box-sizing: border-box;
+    overflow-y: auto;
+    padding-right: 8px;
 }
